[FIX] hr_recruitment: kanban record with long title overflow
Reproduction:
1. Install recruitment
2. Create a new job position with an extra-long title
3. Save and the title of this record is exceed the kanban card

Reason: CSS style doesn’t take account of long title

Fix:  Added overflow and set the content to be broken at words. Other
possible fixes are listed in the comment, but the current fix is the
best in my opinion.

opw-2849601

--- a/addons/hr_recruitment/static/src/scss/hr_job.scss
+++ b/addons/hr_recruitment/static/src/scss/hr_job.scss
@@ -4,6 +4,15 @@
             width: 350px;
             &:not(.o_kanban_ghost) {
                 height: 180px;
+
+                // white-space: nowrap;
+                // text-overflow: ellipsis;
+                // overflow: hidden;
+
+                // overflow: auto;
+
+                overflow:auto;
+                overflow-wrap: break-word;
             }
         }
 
